[gd_scene load_steps=2 format=3 uid="uid://df1otdcd66xb5"]

[ext_resource type="Script" uid="uid://hajpqyeb3qrf" path="res://Scripts/UI/turn_tracker_ui.gd" id="1_w347l"]

[node name="TurnTrackerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w347l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 48.0
offset_right = 93.0
offset_bottom = 98.0

[node name="TurnLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Turn: 1"

[node name="RollsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Rolls Left: 3"

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 106.0
offset_right = 47.0
offset_bottom = 129.0
text = "$$$:"
